@@ -354,12 +354,15 @@
       It now knows about most zero-width characters and a few more
       double-width characters.
 
-      \item Help for \code{which.min} is now more precise about behavior
-      with logical arguments.  (\PR{16532})
+      \item Help for \code{which.min()} is now more precise about
+      behavior with logical arguments.  (\PR{16532})
 
       \item The print width of character strings marked as
       \code{"latin1"} or \code{"bytes"} was in some cases computed
       incorrectly.
+
+      \item \code{abbreviate()} did not give names to the return value
+      if \code{minlength} was zero, unlike when it was positive.
     }
   }
 }
